272/ Deleted bunch of accessory rework and reimplement mechanical lens rework.
273/ Added better explanation of what the scroll effect do.
274/ Change the build version from 0.0.14 to 0.0.15
275/ Significantly buff Heart pistol.
276/ Significantly buff wood armor set.
277/ Fixed axe rework not interactable with tree.
278/ Slightly make shortsword a little bit smarter.
279/ Reduce radius of Eternal wealth from 500 -> 300.
280/ Add in spawn condition for portal to subworld.
281/ Nerf EoC boss fight to be much more fair.
282/ Slightly changed Manafury.
283/ Added Master wood bow.
284/ Added Snowstorm.
285/ Organized lootbox folder for near future implementation.
286/ Added Gold/Platinum Complex Bow.
287/ Implemented test guard mechanic for sword.
288/ Follow up with 287 changes, add in a small parry mechanic.
289/ Organized code.
290/ Reworked Wood sword to be much better.
291/ Deleted 2 Token of Pride upgrade perk.
292/ Deleted Agumentation chance, enchantment chance and transmutation chance from PlayerStatsHandler.
293/ Nerf Alchemist's Book, capped the "Having active buff will increase your stats" effect to 3 buffs.
294/ Added Soul Breaker perk.
295/ Changed how DR work on NPC side.
296/ Organized Mod perk.
297/ Slightly changed Boreal Wood armor to be more fun to play.
298/ Add in extra function for world vault item.
299/ Minor optimization in code.
300/ Lootbox no longer can activate spoil.
301/ Deleted item graveyard and request item add into lootbox due to better solution were found.
302/ Deleted item rng selector for lootbox because it was never used, and a better solution is found instead.
303/ Added EoC, KingSlime, Plantera, Skeletron lootbox and also changed some lootbox to become boss lootbox ( note this may changed in the future ).
304/ Changed how tooltip is display in spoil and lootbox.
305/ Added DefenseMK1 relic set.
306/ Buff Copper armor.
307/ Fixed universal dodge not working.
308/ Reworked Aglet