@@ -111,3 +111,13 @@ Aglet:
 	Increases dodge chance by 15% and jump boost by 35%
 	Upon dodge, player gain 35% movement speed for 30s
 	'''
+ClimbingClaws:
+	'''
+	Increases melee damage by 12%, melee crit chance by 10% and melee crit damage by 25%
+	While sliding, increases defenses by 10.
+	'''
+LavaCharm:
+	'''
+	Enemy that is on fire take 100% more damage.
+	While enemy is near you, deal 42 damage every 1s and inflict on fire debuff.
+	'''
